# aiconfigurator

./: .gitignore  README.md  campaign_notes.md  campaign_state.json  context_mla_perf.txt  generation_mla_perf.txt
aic-rust/: Cargo.toml  README.md
aic-rust/src/: cli.rs  estimator.rs  lib.rs  main.rs  model.rs  paths.rs  perf_database.rs  search.rs  support.rs  system.rs  types.rs
aic-rust/tests/: sdk_parity.rs
aic-rust/tools/: benchmark_default.py  compare.py
campaign_checkpoints/a100_sxm/: context_attention_perf.txt  custom_allreduce_perf.txt  gdn_perf.txt  gemm_perf.txt  generation_attention_perf.txt  mla_bmm_perf.txt  moe_perf.txt
campaign_checkpoints/b300_sxm/: context_attention_perf.txt  context_mla_perf.txt  custom_allreduce_perf.txt  dsa_context_module_perf.txt  dsa_generation_module_perf.txt  gdn_perf.txt  generation_attention_perf.txt  generation_mla_perf.txt  mla_bmm_perf.txt  moe_perf.txt  wideep_context_mla_perf.txt  wideep_context_moe_perf.txt  wideep_generation_mla_perf.txt  wideep_generation_moe_perf.txt
campaign_checkpoints/gb200/: context_attention_perf.txt  context_mla_perf.txt  custom_allreduce_perf.txt  dsa_context_module_perf.txt  dsa_generation_module_perf.txt  gdn_perf.txt  gemm_perf.txt  generation_attention_perf.txt  generation_mla_perf.txt  mla_bmm_perf.txt  wideep_context_mla_perf.txt  wideep_context_moe_perf.txt  wideep_generation_mla_perf.txt  wideep_generation_moe_perf.txt
campaign_checkpoints/gb300/: context_attention_perf.txt  context_mla_perf.txt  custom_allreduce_perf.txt  dsa_context_module_perf.txt  gdn_perf.txt  (+8 more)
(+314 files in other folders)
