[package]
name = "aic-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "aic_rust"
path = "src/lib.rs"

[features]
python-parity = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
indexmap = { version = "2.2", features = ["serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
